Notebook comment added and revised

--- a/4_Anomaly_detection_with_RCF_and_DeepAR/1.Exploratory_Data_Analysis.ipynb
+++ b/4_Anomaly_detection_with_RCF_and_DeepAR/1.Exploratory_Data_Analysis.ipynb
@@ -42,22 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this exercise, we use the clickstream dataset (https://github.com/hortonworks/fieldeng-modern-clickstream). "
+    "For this exercise, we use the clickstream dataset ( https://github.com/hortonworks/fieldeng-modern-clickstream ). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gzip: data/*.gz: No such file or directory\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dir='data'\n",
     "!gzip -d $data_dir/*.gz"
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -231,13 +223,13 @@
        "2012-03-01 00:00:59          tacoma    wa     usa  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clickstream = pd.read_csv('clickstream.tsv', header=None, delimiter='|')\n",
+    "clickstream = pd.read_csv(data_dir + '/clickstream-feed-generated.tsv', header=None, delimiter='|')\n",
     "clickstream.columns = ['clickstream_id','timestamp','IP address','url','is_purchased','is_page_errored','user_session_id','city','state','country']\n",
     "clickstream['timestamp'] = clickstream['timestamp'].astype('datetime64')\n",
     "clickstream.set_index('timestamp', inplace=True)\n",
@@ -246,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +381,7 @@
        "[397941 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +418,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +576,7 @@
        "[34556 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
