Added Kinesis contents
Added Kinesis contents

--- a/4_Anomaly_detection_with_RCF_and_DeepAR/1.Exploratory_Data_Analysis.ipynb
+++ b/4_Anomaly_detection_with_RCF_and_DeepAR/1.Exploratory_Data_Analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1.Exploratory Data Analysis\n",
     "\n",
-    "In statistics, exploratory data analysis is an approach to analyzing data sets to summarize their main characteristics, often with visual methods. In this notebook we will download datasets that is related to realtime streaming of click data, such as click information and session data, from [data source](https://github.com/hortonworks/fieldeng-modern-clickstream). Two additional tasks that will be done here is to explore data for understanding what is in a dataset and the characteristics using famous package pandas, and then to plot numbers of click per page for looking at trends or cyclic patterns.\n",
+    "In statistics, exploratory data analysis is an approach to analyzing data sets to summarize their main characteristics, often with visual methods. In this notebook we will download datasets that is related to realtime streaming of click data, such as click information and session data, from [data source](https://github.com/hortonworks/fieldeng-modern-clickstream). Two additional tasks to do here are to explore data for understanding what is in the dataset and its characteristics using famous package pandas, and then to plot the number of clicks per page to find trends or cyclic patterns.\n",
     "\n",
     "## Table Of Contents\n",
     "* 1) unzipping compressed files\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this exercise, we use the clickstream dataset ( https://github.com/hortonworks/fieldeng-modern-clickstream ). "
+    "For this exercise, we use the clickstream dataset from [here](https://github.com/hortonworks/fieldeng-modern-clickstream). "
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To begin, use Pandas to read the CSV and to show a sample of the data. The clickstream happened every several seconds to span March 01, 2012 to March 15, 2012. We will define the problem to analyze clicks in arbitarry time window.  \n",
+    "To begin, use Pandas to read the CSV and to show a sample of the data. The clickstream occured every few seconds to March 1st, 2012 to March 15th, 2012. We will define the problem to analyze clicks in the arbitarry time window.  \n",
     "We will count:\n",
     "- the number of urls(pages) that users visited\n",
     "- the number of users\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -223,7 +223,7 @@
        "2012-03-01 00:00:59          tacoma    wa     usa  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "[397941 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,12 +432,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We aggregate the clickstream_id and user_session_id in each 10 minutes, and then count them per the urls."
+    "Aggregate the clickstream_id and user_session_id in each 10 minutes, and then count them by url."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "[34556 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,12 +602,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We replace urls to **page_[0,1,2,...n]** for preparing training dataset. As one of the most insightful parts of exploratory data analysis, we plot the dataset according to timestamp. Clicks seem to similar trend and cyclic patterns per each page."
+    "As one of the most insightful parts of exploratory data analysis, we plot the dataset according to timestamp. Clicks show similar trends and cyclic patterns on each page. We replace urls to **page_[0,1,2,...n]** for preparing training dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -648,12 +648,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use some of varialbes in the notebook 2 and 3"
+    "We will use some of varialbes in the following notebooks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -670,6 +670,13 @@
    "source": [
     "%store urls revised_url filtered_clickstream streams"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
