--- a/4_Anomaly_detection_with_RCF_and_DeepAR/2.Amazon_SageMaker_RCF.ipynb
+++ b/4_Anomaly_detection_with_RCF_and_DeepAR/2.Amazon_SageMaker_RCF.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 2.Amazon_SageMaker_RCF\n",
     "\n",
-    "The next step after preparing your data is to build your Random cut forrest model using Amazon SageMaker. Amazon SageMaker is a fully managed machine learning service. Amazon SageMaker provides several built-in machine learning algorithms that you can use for a variety of problem types. There are a few dozen of built-in algorithms like [Linear learner algorithm](https://docs.aws.amazon.com/sagemaker/latest/dg/linear-learner.html), the [XGBoost Algorithm](https://docs.aws.amazon.com/sagemaker/latest/dg/xgboost.html) as well as [Random Cut Forest](https://docs.aws.amazon.com/sagemaker/latest/dg/randomcutforest.html) (RCF). We use the RCF that is an unsupervised algorithm for detecting anomalous data points within a data set. \n",
+    "As a next step after preparing data, we wil build Random cut forrest model using Amazon SageMaker. Amazon SageMaker is a fully managed machine learning service. Amazon SageMaker provides several built-in machine learning algorithms that you can use for a variety of problem types. There are dozens of built-in algorithms like [Linear learner algorithm](https://docs.aws.amazon.com/sagemaker/latest/dg/linear-learner.html), the [XGBoost Algorithm](https://docs.aws.amazon.com/sagemaker/latest/dg/xgboost.html) as well as [Random Cut Forest](https://docs.aws.amazon.com/sagemaker/latest/dg/randomcutforest.html) (RCF). We use the RCF that is an unsupervised algorithm to detect anomalous data points within a data set. \n",
     "\n",
     "## Table Of Contents\n",
     "The overall process for this is:\n",
@@ -14,8 +14,8 @@
     "* 1) Setup\n",
     "* 2) Data Preparation\n",
     "* 3) Training the RCF Model\n",
-    "* 4) Predicting the Model\n",
-    "* 5) Plotting the Prediction\n",
+    "* 4) Detecting spikes with the Model\n",
+    "* 5) Plotting results\n",
     "\n",
     "To get started, simply execute the cells below:"
    ]
@@ -24,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) Setup"
+    "## 1) Setup\n",
+    "\n",
+    "Please make sure you already finished 1st step(1.Exploratory_Data_Analysis.ipynb)"
    ]
   },
   {
@@ -161,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we look at time series trends and patterns graphically as plotting the training data."
+    "Let's see the trends and patterns of clicks graphically by plotting this timeseries. We can see several spikes in a certain period."
    ]
   },
   {
@@ -370,13 +372,7 @@
       "\u001b[34m[I 20-08-21 05:25:25] >>> shutting down FTP server (0 active fds) <<<\u001b[0m\n",
       "\u001b[34m[08/21/2020 05:25:25 INFO 140548358788864] >>> shutting down FTP server (0 active fds) <<<\u001b[0m\n",
       "\u001b[34m#metrics {\"Metrics\": {\"totaltime\": {\"count\": 1, \"max\": 951.7149925231934, \"sum\": 951.7149925231934, \"min\": 951.7149925231934}, \"setuptime\": {\"count\": 1, \"max\": 20.867109298706055, \"sum\": 20.867109298706055, \"min\": 20.867109298706055}}, \"EndTime\": 1597987525.149749, \"Dimensions\": {\"Host\": \"algo-1\", \"Operation\": \"training\", \"Algorithm\": \"RandomCutForest\"}, \"StartTime\": 1597987525.12416}\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\u001b[0m\n",
       "Training seconds: 82\n",
       "Billable seconds: 82\n"
      ]
@@ -393,7 +389,7 @@
    "source": [
     "## 4) Predicting the Model\n",
     "\n",
-    "After you train your model, you can deploy it to get predictions. Now is the time to pull down the deployed model, and detect include when website activity uncharactersitically spike to the actual historical values. "
+    "After you train your model, you can deploy it to get predictions. You can detect unexpected spikes in your website with this endpoint."
    ]
   },
   {
@@ -448,9 +444,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's pass the training dataset formatted CSV format, to the inference endpoint so we can automatically detect the anomalies we saw with our eyes in the plots, above. Note that the serializer and deserializer will automatically take care of the datatype conversion from Numpy NDArrays.\n",
+    "We will pass the training dataset in CSV format to this inference endpoint in order to automatically detect anomalies which were observed with our human eye in the above plot.\n",
     "\n",
-    "For starters, let's only pass in the first six datapoints so we can see what the output looks like."
+    "Then, check the first 6 data points to see what the output looks like."
    ]
   },
   {
@@ -487,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the distribution of our anomaly score."
+    "Next, let's look at the distribution of our anomaly score. Drawing a histogram is often useful when deciding the threshold of anomaly scores. We will choose a value around 4.5. "
    ]
   },
   {
@@ -530,7 +526,7 @@
    "source": [
     "## 5) Plotting the Prediction\n",
     "\n",
-    "We can find the algorthim is detecting anomalies with the change and deviation of each feature value instead of using a fixed threshold."
+    "The code below will plot our time sereis with anomalies. The algorithm detected anomalies accroding to the changes and deviations in each feature value instead of using a fixed threshold."
    ]
   },
   {
@@ -566,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We enlarge the time period in detail from March 13, 2012 8:00 to March 13, 2012 23:00 to look at the detecting abnormal spike. "
+    "The graph above may seem too complicated. Let's zoom in the time from March 13, 2012 8:00 to March 13, 2012 23:00 to look at the results in detail."
    ]
   },
   {
@@ -602,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To examine the relationship between anomaly scores and feature deviations more intuitively, let's plot the the residuals of clicks and users. Below graph show this changes. We can understand anomly socres were returned not only by residual or just the amount of the value. "
+    "To examine the relationship between anomaly scores and feature deviations, we plot the residuals of clicks and users. The graph below illustrates this change. We can understand that anomalous sources were returned, not only by residual or just the amount of value."
    ]
   },
   {
@@ -634,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We zoom the time period again from March 5, 2012 21:30 to March 6, 2012 17:30 to look at the detecting abnormal spike. "
+    "We zoom in the time period from March 5, 2012 21:30 to March 6, 2012 17:30 again to look at the detecting abnormal spike. "
    ]
   },
   {
@@ -702,7 +698,7 @@
     "\n",
     "Finally, we should delete the endpoint before we close the notebook.\n",
     "\n",
-    "To do so execute the cell below. Alternately, you can navigate to the \"Endpoints\" tab in the SageMaker console, select the endpoint with the name stored in the variable endpoint_name, and select \"Delete\" from the \"Actions\" dropdown menu."
+    "To do this, execute the cell below. Alternately, you can navigate to the \"Endpoints\" tab in the SageMaker console, select the endpoint with the name stored in the variable endpoint_name, and select \"Delete\" from the \"Actions\" dropdown menu."
    ]
   },
   {
