Refactor the notebooks according to Eric's comments.

--- a/2_Predict_electricity_demand_with_the_GluonTS_and_SageMaker_custom_containers/02_deploy_gluonts_forecast_models_as_multi_model_endpoints.ipynb
+++ b/2_Predict_electricity_demand_with_the_GluonTS_and_SageMaker_custom_containers/02_deploy_gluonts_forecast_models_as_multi_model_endpoints.ipynb
@@ -10,26 +10,11 @@
     "\n",
     "7. [How to Build the Custom Sagemaker Container for Model Deployment](#7.-How-to-Build-the-Custom-Sagemaker-Container-for-Model-Deployment)\n",
     "8. [How to Deploy Models as Sagemaker Multi Model Endpoint and Invoke the Endpoint](#8.-How-to-Deploy-Models-as-Sagemaker-Multi-Model-Endpoint-and-Invoke-the-Endpoint)\n",
-    "9. [Clean up the resources](#9.-Clean-up-the-resources)\n",
-    "10. [Conclusion](#10.-Conclusion)\n",
+    "9. [How to Do Batch Transform in the Multi Model Server Framework](#9.-How-to-Do-Batch-Transform-in-the-Multi-Model-Server-Framework)\n",
+    "10. [Clean up the resources](#10.-Clean-up-the-resources)\n",
+    "11. [Conclusion](#11.-Conclusion)\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import libraries\n",
-    "import boto3\n",
-    "import jsonlines\n",
-    "import json\n",
-    "import time\n",
-    "\n",
-    "from sagemaker import get_execution_role\n",
-    "from time import gmtime, strftime"
    ]
   },
   {
@@ -49,14 +34,39 @@
     "- SageMaker Inference Toolkit\n",
     "[SageMaker Inference Toolkit](https://github.com/aws/sagemaker-inference-toolkit) is a library that bootstraps MMS in a way that is compatible with SageMaker multi-model endpoints, while still allowing you to tweak important performance parameters, such as the number of workers per model.\n",
     "\n",
-    "In this way, we can compare all the model forecasts in real-time more efficiently, and can save the cost of creating multiple endpoints."
+    "In this way, we can compare all the model forecasts in real-time more efficiently, and can save the cost of creating multiple endpoints.\n",
+    "\n",
+    "The main steps for building the custom Sagemaker container are described as below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define model handler\n",
+    "## Step 1: Import libraries\n",
+    "Before beggining, first import all the python modules needed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import jsonlines\n",
+    "import json\n",
+    "import time\n",
+    "\n",
+    "from sagemaker import get_execution_role\n",
+    "from time import gmtime, strftime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Define model handler\n",
     "The code snippet __`container/model_handler.py`__ below shows how we define a custom handler that supports loading and inference for the GluonTs models.\n",
     "- The `initialize` method will be called when a model is loaded into memory. In this example, it loads the model artifacts at `model_dir` into the GluonTS Predictor class.\n",
     "\n",
@@ -220,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unit testing for the model handler\n",
+    "### Step 3: Unit testing for the model handler\n",
     "Before we build the custom docker container, it is good habit to do some unit testing (__`container/test_model_handler.py`__) as below."
    ]
   },
@@ -260,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Docker Entrypoint\n",
+    "## Step 4: Define Docker Entrypoint\n",
     "The inference container in this example uses the Inference Toolkit to start MMS which can be seen in the __`container/dockerd-entrypoint.py`__ file as below."
    ]
   },
@@ -313,9 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building and registering a container\n",
+    "## Step 5: Building and registering a container\n",
     "\n",
-    "The shell script below will first build a custome Docker image which uses MMS as the front end (configured through SageMaker Inference Toolkit in `container/dockerd-entrypoint.py`), and `container/model_handler.py` shown above as the backend handler. It will then upload the image to an ECR repository in your account."
+    "The shell script below will first build a custome Docker image which uses MMS as the front end (configured through SageMaker Inference Toolkit in `container/dockerd-entrypoint.py`), and `container/model_handler.py` shown above as the backend handler. It will then upload the image to an ECR repository in your account. `This step may take a bit long when running for the first time.`"
    ]
   },
   {
@@ -428,14 +438,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. How to Deploy Models as Sagemaker Multi Model Endpoint and Invoke the Endpoint"
+    "# 8. How to Deploy Models as Sagemaker Multi Model Endpoint and Invoke the Endpoint\n",
+    "\n",
+    "After building and registering the custom Sagemaker container, we can start to deploy models as Sagemaker multi-model endpoint and invoke the endpoint. The main steps are outlined as below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up the environment"
+    "## Step 1: Set up the environment"
    ]
   },
   {
@@ -469,8 +481,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a multi-model endpoint\n",
-    "### Import models into hosting\n",
+    "## Step 2: Create a multi-model endpoint\n",
+    "### Step 2-1: Import models into hosting\n",
     "When creating the Model entity for multi-model endpoints, the container's `ModelDataUrl` is the S3 prefix where the model artifacts that are invokable by the endpoint are located. The rest of the S3 path will be specified when invoking the model.\n",
     "\n",
     "The `Mode` of container is specified as `MultiModel` to signify that the container will host multiple models."
@@ -519,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create endpoint configuration\n",
+    "### Step 2-2: Create endpoint configuration\n",
     "Endpoint config creation works the same way it does as single model endpoints."
    ]
   },
@@ -557,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the multi model endpoint\n",
+    "### Step 2-3: Create the multi model endpoint\n",
     "Similarly, endpoint creation works the same way as for single model endpoints."
    ]
   },
@@ -599,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Invoke models\n",
+    "## Step 4: Invoke models\n",
     "Now we invoke the models that we uploaded to S3 previously. The first invocation of a model may be slow, since behind the scenes, SageMaker is downloading the model artifacts from S3 to the instance and loading it into the container."
    ]
   },
@@ -843,8 +855,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Batch Transform Example\n",
+    "# 9. How to Do Batch Transform in the Multi Model Server Framework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The MMS does not support batch transform directly, to perform batch tranform. We need to create models seperately in Sagemaker, and do the batch transform for each model one by one. Below shows an example of how to do batch transoform for one model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Create the Sagemaker model from the model artifact."
    ]
   },
   {
@@ -890,12 +915,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "test_data_s3_path = \"s3://{}/{}/data/test.json\".format(bucket, prefix)"
+    "## Step 2: Start the Batch Transform Job Using the Model Created above"
    ]
   },
   {
@@ -922,6 +945,7 @@
     }
    ],
    "source": [
+    "test_data_s3_path = \"s3://{}/{}/data/test.json\".format(bucket, prefix)\n",
     "transform_job_name = 'DEMO-GluonTS-{}-BT-'.format(model) + strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
     "\n",
     "transform_input = {\n",
@@ -952,6 +976,13 @@
     "                        TransformOutput = transform_output,\n",
     "                        TransformResources = transform_resources\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Check the Batch Transform Job Status"
    ]
   },
   {
@@ -1004,7 +1035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspect Batch Transform Results"
+    "## Step 4: Inspect Batch Transform Results"
    ]
   },
   {
@@ -1033,7 +1064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. Clean up the resources"
+    "# 10. Clean up the resources"
    ]
   },
   {
@@ -1076,7 +1107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Conclusion"
+    "# 11. Conclusion"
    ]
   },
   {
