adding training step logic

--- a/1_Forecasting_Air_Pollution_with_Amazon_SageMaker_and_DeepAR/pipeline/Air_Quality_Forecasting_ML_Pipeline.ipynb
+++ b/1_Forecasting_Air_Pollution_with_Amazon_SageMaker_and_DeepAR/pipeline/Air_Quality_Forecasting_ML_Pipeline.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,11 @@
     "sagemaker_session = sagemaker.Session()\n",
     "\n",
     "region = boto3.session.Session().region_name\n",
-    "role = get_execution_role()"
+    "role = get_execution_role()\n",
+    "\n",
+    "session = boto3.Session()\n",
+    "account_id = session.client('sts').get_caller_identity().get('Account')\n",
+    "bucket_name = f'{account_id}-openaq-lab'"
    ]
   },
   {
@@ -127,17 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting docker/Dockerfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile docker/Dockerfile\n",
     "\n",
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'593380422482.dkr.ecr.us-east-1.amazonaws.com/aq-forecasting-processing-container:latest'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "processing_repository_uri"
    ]
@@ -229,16 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "PREPROCESSING_SCRIPT_LOCATION = \"preprocessing.py\"\n",
-    "\n",
     "input_code = sagemaker_session.upload_data(\n",
     "    PREPROCESSING_SCRIPT_LOCATION,\n",
-    "    bucket = sagemaker_session.default_bucket(),\n",
-    "    key_prefix = \"processing/code\",\n",
+    "    bucket = bucket_name,\n",
+    "    key_prefix = \"preprocessing/code\",\n",
     ")"
    ]
   },
@@ -246,18 +252,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "S3 locations of preprocessing output and training data."
+    "S3 locations of preprocessing output with training, test & all features."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_bucket_base_uri = f\"s3://{sagemaker_session.default_bucket()}\"\n",
-    "output_data = f\"{s3_bucket_base_uri}/preprocessing_data/output\"\n",
-    "#preprocessed_training_data = f\"{output_data}/train_data\""
+    "output_data = f\"s3://{bucket_name}/preprocessing/output\""
    ]
   },
   {
@@ -269,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,16 +315,26 @@
     "\n",
     "outputs = [\n",
     "    ProcessingOutput(\n",
-    "        source = \"/opt/ml/processing/output\",\n",
-    "        destination = f\"{output_data}\",\n",
-    "        output_name = \"output_data\"\n",
+    "        source = \"/opt/ml/processing/output/all\",\n",
+    "        destination = f\"{output_data}/all\",\n",
+    "        output_name = \"all_data\"\n",
+    "    ),\n",
+    "    ProcessingOutput(\n",
+    "        source = \"/opt/ml/processing/output/train\",\n",
+    "        destination = f\"{output_data}/train\",\n",
+    "        output_name = \"train_data\"\n",
+    "    ),\n",
+    "    ProcessingOutput(\n",
+    "        source = \"/opt/ml/processing/output/test\",\n",
+    "        destination = f\"{output_data}/test\",\n",
+    "        output_name = \"test_data\"\n",
     "    )\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,12 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "processing_step = ProcessingStep(\n",
-    "    \"Air Quality Forecasting pre-processing step\",\n",
+    "    \"AirQualityForecasting Pre-processing Step\",\n",
     "    processor = preprocessing_processor,\n",
     "    job_name = execution_input[\"PreprocessingJobName\"],\n",
     "    inputs = inputs,\n",
@@ -369,10 +383,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "image_name = sagemaker.amazon.amazon_estimator.get_image_uri(region, \"forecasting-deepar\", \"latest\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = f's3://{bucket_name}/training/output'\n",
+    "\n",
+    "quantiles = [float(x / 10) for x in range(1, 10)]\n",
+    "quantile_names = [f'0.{q}' for q in quantiles]\n",
+    "\n",
+    "hpo = dict(\n",
+    "    time_freq= '1H'\n",
+    "    ,early_stopping_patience= 40\n",
+    "    ,prediction_length= 48\n",
+    "    ,num_eval_samples= 10\n",
+    "    ,test_quantiles= quantiles    \n",
+    "    ,epochs= 400\n",
+    "    ,context_length= 3\n",
+    "    ,num_cells= 157\n",
+    "    ,num_layers= 4\n",
+    "    ,dropout_rate= 0.04\n",
+    "    ,embedding_dimension= 12\n",
+    "    ,mini_batch_size= 633\n",
+    "    ,learning_rate= 0.0005\n",
+    ")\n",
+    "\n",
+    "estimator = sagemaker.estimator.Estimator(\n",
+    "        sagemaker_session = sagemaker_session,\n",
+    "        image_name = image_name,\n",
+    "        role = role,\n",
+    "        train_instance_count = 1,\n",
+    "        train_instance_type ='ml.c5.xlarge',\n",
+    "        base_job_name = 'deepar-openaq-demo',\n",
+    "        output_path = output_path\n",
+    ")\n",
+    "\n",
+    "estimator.set_hyperparameters(**hpo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dict(train = f\"{output_data}/all/all_features.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "training_step = steps.TrainingStep(\n",
+    "    \"AirQualityForecasting Training Step\",\n",
+    "    estimator = estimator,\n",
+    "    data = data,\n",
+    "    job_name = execution_input[\"TrainingJobName\"],\n",
+    "    wait_for_completion = True\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +506,8 @@
     "    error_equals = [\"States.TaskFailed\"],\n",
     "    next_step = failed_state_sagemaker_processing_failure   \n",
     ")\n",
-    "processing_step.add_catch(catch_state_processing)"
+    "processing_step.add_catch(catch_state_processing)\n",
+    "training_step.add_catch(catch_state_processing)"
    ]
   },
   {
@@ -437,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,9 +547,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(preprocessing_job_name)"
    ]
@@ -485,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow_graph = Chain([processing_step])\n",
+    "workflow_graph = Chain([processing_step, training_step])\n",
     "workflow = Workflow(\n",
     "    name = \"AirQualityForecastingWorkflow\",\n",
     "    definition = workflow_graph,\n",
